add the buildOnDiscoverStrategyImpl that build only the first time the branch or change request is discovered

--- a/src/main/resources/jenkins/branch/buildstrategies/basic/Messages.properties
+++ b/src/main/resources/jenkins/branch/buildstrategies/basic/Messages.properties
@@ -1,4 +1,5 @@
 BranchBuildStrategyImpl.displayName=Regular branches
+BuildOnDiscoverStrategyImpl.displayName=Discovered Branches / PR
 NamedBranchBuildStrategyImpl.displayName=Named branches
 NamedBranchBuildStrategyImpl.exactDisplayName=Exact name
 NamedBranchBuildStrategyImpl.regexDisplayName=Regular expression
